# MPI_Test

./: CMakeLists.txt  lat2d_mpi.cpp  lat4d.cpp  modules_lat4d.sh  script-lat4d.sh
